# Contest-Rag

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
Docker/: Dockerfile  requirements.txt
src/: .env.example  main.py
src/AI/llm/: LLMInterface.py  LLMProviderFactory.py
src/AI/llm/providers/: CoHereProvider.py  GeminiProvider.py  OpenAIProvider.py  __init__.py
src/AI/llm/templates/: template_parser.py
src/AI/vectordb/providers/: QdrantDBProvider.py
src/assets/database/qdrant_db/collection/collection_1/: storage.sqlite
src/assets/files/1/: fj0hqba2u3ww_team_info.txt
src/controllers/: NLPController.py  ProcessController.py
src/helpers/: config.py
src/models/: ChunkModel.py
src/models/db_schemes/: __init__.py  asset.py  data_chunk.py  project.py
src/models/enums/: DataBaseEnum.py  ProcessingEnum.py  ResponseEnum.py
src/routes/: base.py  data.py  nlp.py
src/routes/schemes/: data.py
src/stores/llm/: LLMEnums.py  LLMInterface.py  LLMProviderFactory.py
src/stores/llm/provider/: CoHereProvider.py  OpenAIProvider.py
